--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@mui/material": "^6.3.0",
     "@reduxjs/toolkit": "^2.5.0",
     "cra-template": "1.2.0",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
